--- a/src/app/components/pages/dictionary/search/search.component.html
+++ b/src/app/components/pages/dictionary/search/search.component.html
@@ -4,5 +4,5 @@
          [placeholder]="'input.filter' | translate"
          [(ngModel)]="searchTag"
          (ngModelChange)="search()">
-  <htt-icon-btn src="./assets/images/close.svg" [hover]="true" (click)="clear()"></htt-icon-btn>
+  <htt-icon-btn src="./assets/images/close.svg" (click)="clear()"></htt-icon-btn>
 </div>
