--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,15 @@ input[type="text"] {
     color: $crayola;
   }
 }
+
+.directive-not-found {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 27px;
+
+  &-flex {
+    display: flex;
+  }
+}
